<resources>
    <string name="app_name">Bedroom Air</string>
    <string name="action_settings">Settings</string>
    <string name="record_area">MAKE A RECORDING</string>
    <string name="stop_recording">STOP RECORDING</string>
    <string name="play_area">PLAY THE RECORDING</string>
    <string name="play_recording">PLAY RECORDING</string>
    <string name="recording">Recording...</string>
    <string name="playing">Playing...</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="dateTime">DateTime</string>
    <string name="length">Length</string>
    <string name="id">ID</string>
</resources>
